--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,12 @@
   padding: 0;
   font-family: 'Source Code Pro', monospace;
 }
+ClimbingBoxLoader{
+  /* text-align: center; */
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
